# rust_http_server

./: 404.html  Cargo.toml  README.md  index.html
src/: main.rs
